--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,7 @@ storage/
 !gradle/wrapper/gradle-wrapper.jar
 !**/src/main/**/build/
 !**/src/test/**/build/
+README.md
 
 ### STS ###
 .apt_generated
