인코딩 설정 추가

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -32,6 +32,7 @@ spring:
     init:
       mode: always
       schema-locations: classpath:schema.sql
+      encoding: UTF-8
 
   servlet:
     multipart:
