--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -27,7 +27,7 @@ spring:
         format_sql: true
         use_sql_comments: true
 
-
+  # schema.sql ?? ?? ???? (?? ??)
   sql:
     init:
       mode: always
@@ -36,7 +36,7 @@ spring:
 
   servlet:
     multipart:
-      max-file-size: 10MB
+      max-file-size: 10MB           # ?? ??? ?? ?? ??
       max-request-size: 10MB
 
 springdoc:
@@ -47,4 +47,12 @@ springdoc:
   default-consumes-media-type: application/json
   default-produces-media-type: application/json
 
+# hybernate해주는 역할(중복)
+#logging:
+#  level:
+#    org.hibernate.SQL: debug
+#    org.hibernate.type.descriptor.sql.BasicBinder: trace
 
+csv:
+  backup:
+    root: ./data/backups
